Cleanup and add styles

--- a/mail-subscriptions-ui/MailSubscriptionsApp/MailSubscriptionsApp/ui-app/src/index.html
+++ b/mail-subscriptions-ui/MailSubscriptionsApp/MailSubscriptionsApp/ui-app/src/index.html
@@ -2,15 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>MailSubscriptionsUi</title>
+  <title>Interview Task</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  
 </head>
 <body>
-  <app-root>Loading ...</app-root>
+  <app-root>
+    <img class="loading-logo animated infinite flash" src="assets/Artboard.png">
+  </app-root>
 </body>
 </html>
